# yoyoengine

./: .gitattributes  .gitignore  LICENSE.md  MIGRATION.txt  Makefile  README.md  README_8md.html  RELEASE_CHECKLIST.md  TODO.md  annotated.html  annotated_dup.js  audio_8c.html  audio_8c.js  audio_8c__incl.map  audio_8c__incl.md5  audio_8h.html  audio_8h.js  audio_8h__dep__incl.map  audio_8h__dep__incl.md5  audio_8h__incl.map  audio_8h__incl.md5  audio_8h_source.html  audiosouce_8c.html  audiosouce_8c__incl.map  audiosouce_8c__incl.md5  audiosource_8c.html  audiosource_8c.js  audiosource_8c__incl.map  audiosource_8c__incl.md5  audiosource_8h.html  audiosource_8h.js  audiosource_8h__dep__incl.map  audiosource_8h__dep__incl.md5  audiosource_8h__incl.map  audiosource_8h__incl.md5  audiosource_8h_source.html  button_8c.html  button_8c.js  button_8c__incl.map  button_8c__incl.md5  (+829 more)
.github/workflows/: compile-tests.yml  generate-docs.yml  generate-doxygen.yml
docs/: index.md  networking.md  rendering.md
docs/Feature Overview/: plugins.md
docs/Getting Started/: general_knowledge.md  getting_started.md
docs/Scripting/C Scripting/: c_scripting.md
docs/Scripting/Lua Scripting/: overview.md  systems.md
editor/: CMakeLists.txt  Makefile  README.md  build_and_run.sh  build_linux.sh  editor.yoyo  settings.yoyo  uninstall.sh  updater.sh
editor/include/: editor.h  editor_build.h  editor_fs_ops.h  editor_input.h  editor_panels.h  editor_selection.h  editor_serialize.h  editor_settings_ui.h  editor_ui.h  editor_utils.h
editor/src/: editor.c  editor_build.c  editor_fs_ops.c  editor_input.c  editor_selection.c  editor_serialize.c  editor_settings_ui.c  editor_ui.c  editor_utils.c
editor/src/panels/: editor_panel_credits.c  editor_panel_keybinds.c  editor_panel_styles.c
editor/src/ui/: editor_inspector.c  editor_settings_ui.c  editor_ui.c
editor/src/ui/panels/: editor_panel_credits.c  editor_panel_keybinds.c  editor_panel_loading.c  editor_panel_scene_settings.c  editor_panel_styles.c  editor_panel_tricks.c  editor_panel_welcome.c
engine/: CMakeLists.txt  Doxyfile  Makefile  build_linux.sh  build_windows.sh  windows_toolchain.cmake
engine/lua/: api.lua  test_suite.lua
engine/src/: audio.c  button.c  cache.c  config.c  console.c  debug_renderer.c  engine.c  event.c  file_picker.c  filesystem.c  graphics.c  input.c  json.c  logging.c  lua.c  networking.c  physics.c  scene.c  timer.c  tricks.c  ui.c  utils.c  version.c  ye_nk.c  yep.c
engine/src/console/: console.c
engine/src/console/commands/: cmd_clear.c  cmd_config.c  cmd_entlist.c  cmd_help.c  cmd_overlay.c  cmd_quit.c  cmd_scene.c
engine/src/ecs/: audiosouce.c  audiosource.c  button.c  camera.c  collider.c  ecs.c  lua_script.c  physics.c  renderer.c  rigidbody.c  tag.c  transform.c
engine/src/lua_runtime/: api.lua  runtime.lua
engine/src/lua_runtime/definitions/: input_codes.lua
engine/src/lua_runtime/ecs/: audiosource.lua  button.lua  camera.lua  collider.lua  entity.lua  lua_script.lua  physics.lua  renderer.lua  tag.lua  transform.lua
engine/src/lua_runtime/subsystems/: audio.lua  input.lua  scene.lua  timer.lua
engine/src/overlays/: physics_overlay.c
engine/src/scripting/: lua_api.c  lua_api_callbacks.c  lua_button.c  lua_camera.c  lua_collider.c  lua_entity.c  lua_lua_script.c  lua_physics.c  lua_renderer.c  lua_rigidbody.c  lua_subsystem_audio.c  lua_subsystem_input.c  lua_subsystem_scene.c  lua_subsystem_timer.c  lua_tag.c  lua_transform.c
engine/src/tar_physics/: rigidbody.c  solver.c  tar.c
engine/src/types/: vector.c
engine/src/ui/: chart.c  overlays.c  ui.c
engine/toolchains/: emscripten.cmake  windows.cmake
examples/: .gitignore  TODO.md
examples/minesweeper/: Makefile  README.md  minesweeper.c  minesweeper.h
examples/minesweeper/resources/: styles.yoyo
examples/minesweeper/resources/scenes/: main.yoyo
examples/minesweeper/resources/scripts/: fib.lua
hub/: README.md
launcher/: .gitignore  README.md  launcher.py
launcher/template/: build.py  build.yoyo  entry.c  settings.yoyo
launcher/template/custom/include/: yoyo_c_api.h
launcher/template/resources/: styles.yoyo
launcher/template/resources/scenes/: entry.yoyo
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  (+66 more)
src/: animation.c  audio.c  engine.c  graphics.c  logging.c  lua.c  ui.c  variant.c
src/editor/: Makefile  README.md  editor.c  launcher.py
src/engine/: audio.c  button.c  cache.c  ecs.c  engine.c  graphics.c  json.c  logging.c  lua.c  scene.c  timer.c  ui.c  utils.c  variant.c
src/lib/: animation.h  engine.h  graphics.h  linkedlist.h  utils.h
template/: .gitignore  CMakeLists.txt  README.md  build.py  build.yoyo  entry.c  settings.yoyo
template/custom/include/: yoyo_c_api.h
template/custom/src/: router.c
template/resources/: styles.yoyo
template/resources/scenes/: entry.yoyo
template/tricks/: README.md
tests/: test_invariant_yep.c
tools/: create_animation.py  rename_animation.py  udp_ping.py
tricks/: TODO.md
yep/: CMakeLists.txt  test.c  yep.c  yep.h
